Added toggling of updates in dashboard + pagination on frontpage

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,8 @@
+
+<% unless params[:tag_name].blank? %>
+  <h1>Updates tagged with <%= h(params[:tag_name]) %></h1>
+<% end %>
+
 <ul class="posts">
   <% @posts.each do |post| 
        next unless post.type
@@ -18,3 +23,5 @@
     </li>
   <% end %>
 </ul>
+
+<%= will_paginate @posts %>
