--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <html>
-  <head>
+  <head profile="http://gmpg.org/xfn/11 http://www.w3.org/2006/03/hcard http://microformats.org/wiki/hcalendar-profile">
     <title><%= @stream.title %> - <%= @stream.subtitle %></title>
     <%= auto_discovery_link_tag(:rss, articles_feed_url(:format => 'rss'), :title => 'Articles RSS') %>
     <%= auto_discovery_link_tag(:atom, articles_feed_url(:format => 'atom'), :title => 'Articles Atom') %>
@@ -36,7 +36,7 @@
          Apart from obsessing about many technology related topics, I enjoy traveling and international life. 
          In the coming months I intend to boost up my entrepreneurial activities, so stay tuned!</p>
          <a rel="license" class="license" href="http://creativecommons.org/licenses/by/3.0/nl/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/nl/88x31.png" /></a>
-        <p>All content on this blog is available under the <a href="http://creativecommons.org/licenses/by/3.0/" rel="license">Creative Commons Attribution 3.0 License</a>. Dominiek.com is running <a href="http://github.com/dominiek/kakuteru/tree">Kakuteru</a> a new Semantic-Web enabled lifestreamer. Design and interaction inspired by <a href="http://yongfook">Yonfook's Sweetcron</a>. Most icons used are by <a href="http://sweetie.sublink.ca/">Joseph North</a>.</p>
+        <p>All content on this blog is available under the <a href="http://creativecommons.org/licenses/by/3.0/" rel="license">Creative Commons Attribution 3.0 License</a>. Dominiek.com is running <a href="http://github.com/dominiek/kakuteru/tree">Kakuteru</a> a new Semantic-Web enabled lifestreamer. Design and interaction inspired by <a href="http://yongfook.com/">Yonfook's Sweetcron</a>. Most icons used are by <a href="http://sweetie.sublink.ca/">Joseph North</a>.</p>
       </div>
     </div>
     <%= yield(:foot) %>
