--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -8,8 +8,8 @@
       <li>to market yourself better</li>
       <li>inspired by <%= link_to("Yongfook's Sweetcron", 'http://yongfook.com/') %></li>
       <li>use your own domain and control all the styling</li>
-      <li>support for social voting services like <%= link_to('Digg') %> and <%= link_to('Addthis') %></li>
-      <li>integrates with <%= link_to('Feedburner') %>, <%= link_to('Disqus') %>, <%= link_to('Dopplr') %>, etc.</li>
+      <li>support for social voting services like <%= link_to('Digg', 'http://digg.com') %> and <%= link_to('Addthis', 'http://addthis.com') %></li>
+      <li>integrates with <%= link_to('Feedburner', 'http://feedburner.com') %>, <%= link_to('Disqus', 'http://disqus.com/') %>, <%= link_to('Dopplr', 'http://dopplr.com') %>, etc.</li>
     </ul>
   </div>
 </div>
@@ -32,11 +32,11 @@
 <div class="semantic_web">
   <h3>Semantic Web ready!</h3>
   <ul>
-    <li>conforming to many Web Standards, <%= link_to('Microformats') %> and <%= link_to('Nanoformats') %></li>
-    <li>pinging the Blogosphere through <%= link_to('Technorati') %> and many others</li>
-    <li>integrates with <%= link_to('Zemanta') %> to facilitate auto-tagging</li>
+    <li>conforming to many Web Standards, <%= link_to('Microformats', 'http://microformats.org/') %> and <%= link_to('Nanoformats', 'http://microformats.org/wiki/microblogging-nanoformats') %></li>
+    <li>pinging the Blogosphere through <%= link_to('Technorati', 'http://technorati.com/') %> and many others</li>
+    <li>integrates with <%= link_to('Zemanta', 'http://zemanta.com/') %> to facilitate auto-tagging</li>
     <li>built-in content recommender system<li>
-    <li>providing attention data in <%= link_to('APML') %> format</li>
+    <li>gathering attention data and providing that in <%= link_to('APML', 'http://apml.org/') %> format</li>
   </ul>
   <span><%= link_to("Want to get involved?", "http://github.com/dominiek/kakuteru/tree") %></span>
   <div class="clear"></div>
