--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,3 @@
+<%= link_to('return to overview', manage_articles_url, :rel => 'directory', :class => 'return_to_index') %>
 <h1>New draft</h1>
 <%= render(:partial => 'posts/form')%>
