--- a/app/views/posts/_list_article.html.erb
+++ b/app/views/posts/_list_article.html.erb
@@ -1,7 +1,7 @@
 <li>
   <span class="actions">
-    <%= link_to('edit', edit_post_url(:id => list_article), :class => 'edit') %> · 
+    <%= link_to('view on blog', read_url(:id => list_article), :class => 'view') %> · 
     <%= link_to('delete', delete_post_url(:id => list_article), :class => 'delete', :confirm => 'Are you sure to delete this article?') %>
   </span>
-  <%= list_article.caption %>
+  <span class="caption"><%= link_to(list_article.caption, edit_post_url(:id => list_article), :class => 'edit', :title => 'Edit!', :alt => 'Edit!') %></span>
 </li>
