--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,2 +1,4 @@
+<%= link_to('return to overview', manage_articles_url, :rel => 'directory', :class => 'return_to_index') %>
 <h1>Edit article</h1>
-<%= render(:partial => 'posts/form')%>
+<%= render(:partial => 'posts/form') %>
+<%= render(:partial => 'assets/list') %>
