--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -1,4 +1,7 @@
 
+.busy {
+	background: url('/images/spinner.gif') no-repeat left center !important;
+}
 
 .navigation {
 	height: 70px;
@@ -25,6 +28,10 @@ ul,li {
 	list-style-type: none;
 }
 
+a.return_to_index {
+	float: right;
+}
+
 .navigation li {
 	float: left;
 	display: block;
@@ -46,7 +53,6 @@ input[type=submit],
 textarea,
 select {
 	font-size: 20px;
-	border: #333 1px solid;
 	padding: 4px;
 }
 
@@ -55,9 +61,8 @@ textarea {
 	width: 500px;
 }
 
-.write input[type="text"],
-.write textarea {
-	width: 700px;
+input[type=hidden] {
+	display: none;
 }
 
 form input,
@@ -68,6 +73,12 @@ form select {
 	padding: 4px;
 	font-size: 18px;
 }
+
+form p {
+	clear: both;
+}
+
+/* Settings */
 
 .settings form p span {
 	float: left;
@@ -87,9 +98,7 @@ form select {
 	clear: both;
 }
 
-form p {
-	clear: both;
-}
+/* Services */
 
 .services li {
 	border-bottom: 1px dotted #333;
@@ -110,9 +119,115 @@ form p {
 	display: inline;
 }
 
+.articles li {
+	padding: 0.4em;
+}
+
+.stream li:hover,
+.services li:hover,
+.assets li:hover,
+.articles li:hover {
+	background-color: #F7F7F7;
+}
+
+li span.caption {
+	font-size: 18px;
+}
+
 li span.actions {
 	display: block;
+	float: right;
+	margin: 0.2em 0;
+}
+
+.articles a.edit {
+	background: url('/images/icons/24-frame.png') no-repeat left center;
+	padding-left: 30px;
+}
+
+a.edit:hover {
+	background: url('/images/icons/16-em-pencil.png') no-repeat 5px center;
+	padding-left: 30px;
+}
+
+a.delete {
+	background: url('/images/icons/16-em-cross.png') no-repeat left center;
+	padding-left: 20px;
+}
+
+div.login {
+	background-color: #ddd;
+	width: 500px;
+	padding: 1em;
+	margin: 2em auto;
+}
+
+.login h2 {
+	margin: 0.4em 0;
+}
+
+/* Write article */
+
+.write input[type="text"],
+.write textarea {
+	width: 600px;
+}
+
+.write textarea.summary {
+	height: 10em;
+}
+
+div.write {
 	float: left;
-	margin: 0 1em 0 0;
-	width: 100px;
+	margin-right: 1em;
+}
+
+.write form input[type=checkbox] {
+	display: block;
+	float: left;
+	margin-right: 1em;
+}
+
+.write textarea {
+	margin-bottom: 0.4em;
+	font-size: 14px;
+}
+
+.write label {
+	display: block;
+	margin: 0.4em 0;
+}
+
+/* Assets */
+
+.assets {
+	margin-top: 100px;
+	background-color: #ddd;
+	padding: 1em;
+	-moz-border-radius: 10px;
+	margin-left: 640px;
+}
+
+.assets li {
+	background: url('/images/icons/16-file-page.png') no-repeat left center;
+	font-size: 12px;
+	padding: 0.4em 0 0.4em 20px;
+	margin: 0.1em 0;
+	border-top: 1px solid #eee;
+}
+
+
+.assets li:hover {
+	background: url('/images/icons/16-em-plus.png') no-repeat left center;
+	background-color: #eee;
+}
+
+.assets .upload {
+	background: url('/images/icons/24-em-up.png') no-repeat left center;
+	padding-left: 30px;
+	margin: 1em 0;
+}
+
+.assets h2 {
+	margin-bottom: 0.4em;
 }
