--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,15 +4,16 @@
   <p><small>Hover the labels to see description tooltip.</small></p>
   <% form_tag do %>
     <div>
-      <p><label for="password" title="Need this to get in.">Password: </label><%= password_field(:stream, :password) %></p>
-      <p><label for="blog_url" title="URL of this blog.">Blog URL: </label><%= text_field(:stream, :blog_url) %></p>
-      <p><label for="title" title="Will be used for SEO and in the title $title - $subtitle.">Title: </label><%= text_field(:stream, :title) %></p>
-      <p><label for="subtitle" title="Will be used for SEO and in the title $title - $subtitle.">Subtitle: </label><%= text_field(:stream, :subtitle) %></p>
-      <p><label for="author" title="Used for feeds and for microformats.">Your name: </label><%= text_field(:stream, :author) %></p>
-      <p><label for="friendfeed_url" title="Core backend of the lifestream feed must be in XML, eg: http://friendfeed.com/api/feed/user/dominiek?format=xml">Friendfeed URL: </label><%= text_field(:stream, :friendfeed_url) %></p>
+      <p><label for="password" class="required" title="Need this to get in.">Password: </label><%= password_field(:stream, :password) %></p>
+      <p><label for="blog_url" class="required" title="URL of this blog.">Blog URL: </label><%= text_field(:stream, :blog_url) %></p>
+      <p><label for="title" class="required" title="Will be used for SEO and in the title $title - $subtitle.">Title: </label><%= text_field(:stream, :title) %></p>
+      <p><label for="subtitle" class="required" title="Will be used for SEO and in the title $title - $subtitle.">Subtitle: </label><%= text_field(:stream, :subtitle) %></p>
+      <p><label for="author" class="required" title="Used for feeds and for microformats.">Your name: </label><%= text_field(:stream, :author) %></p>
+      <p><label for="friendfeed_url" class="required" title="Core backend of the lifestream feed must be in XML, eg: http://friendfeed.com/api/feed/user/dominiek?format=xml">Friendfeed URL: </label><%= text_field(:stream, :friendfeed_url) %></p>
       <p><label for="addthis_username" title="If set, will be used for voting mechanism next to digg and twitter.">Addthis.com user: </label><%= text_field(:stream, :addthis_username) %></p>
       <p><label for="disqus_forum_identifier" title="If set, will be used to provide commenting by Disqus.com">Disqus forum identifier: </label><%= text_field(:stream, :disqus_forum_identifier) %></p>
-      <p><label for="feedburner_feed_url" title="Make sure to set /articles.atom as your FeedBurner source!">Feedburner Feed URL: </label><%= text_field(:stream, :feedburner_feed_url) %></p>
+      <p><label for="feedburner_feed_url" title="Make sure to set /articles.atom as your FeedBurner source!">Feedburner Feed URL: </label><%= text_field(:stream, :feedburner_feed_url) %></p>     
+      <p><label for="dopplr_ical_url" title="The iCal address of your Dopplr.com account - used for showing your travel schedule">Dopplr iCal URL: </label><%= text_field(:stream, :dopplr_ical_url) %></p>
     </div>
     <div class="clear"></div>
     <h2>Stream filter</h2>
