--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -20,6 +20,11 @@ ul,li {
 	list-style-type: none;
 }
 
+abbr {
+	text-decoration: none;
+	border-bottom: none;
+}
+
 /* Layout */
 
 .header {
@@ -238,6 +243,7 @@ div.articles a.feedburner {
 
 /* Stream panels */
 
+.trips h3,
 .tagcloud h3,
 .profiles h3 {
 	margin-bottom: 0.8em;
@@ -250,6 +256,7 @@ div.articles a.feedburner {
 	padding: 1em;
 }
 
+.trips,
 .profiles {
 	float: left;
 	width: 300px;
@@ -257,7 +264,23 @@ div.articles a.feedburner {
 }
 
 .profiles li {
-  margin-bottom: 1em;	
+  margin-bottom: 0.8em;	
+}
+
+.trips li {
+	margin-bottom: 0.6em;
+}
+
+.trips li abbr.travel_ends_at,
+.trips li .summary,
+.trips li .description {
+	visibility: hidden;
+	display: none;
+}
+
+.trips li abbr.travel_starts_at {
+	display: block;
+	font-size: 12px;
 }
 
 .profiles .more {
