--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -72,6 +72,12 @@
     </div>
   <% end %>
   
+  <div class="stats">
+    <h3>Activity Stats</h3>
+    <%= link_to(image_tag(@stream.activity_summary_sparkline_url), statistics_url) %>
+    <%= link_to('more', statistics_url, :class => 'more') %>
+  </div>
+  
   <%= will_paginate(@posts) if @posts.respond_to?(:total_pages) %>
 </div>
 
