--- a/app/views/posts/archive.html.erb
+++ b/app/views/posts/archive.html.erb
@@ -1,5 +1,5 @@
 
-<div class="archive">
+<div class="archive page">
   <h1>Previous Articles</h1>
   <% if @posts.blank? %>
     <p>No articles published yet.</p>
