--- a/app/views/posts/media.html.erb
+++ b/app/views/posts/media.html.erb
@@ -1,4 +1,4 @@
-<div class="all media">
+<div class="all media page">
   <h1>Recent Media</h1>
   <ul>
     <%= render(:partial => 'media_post', :collection => @media_posts) %>
