--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,4 +1,4 @@
-<div class="statistics">
+<div class="statistics page">
   <div class="overall activity">
     <%= image_tag(@stream.activity_overview_graph.to_url) %>
   </div>
