--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="read">
+<div class="read page">
   <abbr class="published" title="<%= @post.published_at.iso8601 %>">
     <%= distance_of_time_in_words_to_now(@post.published_at) %> ago
   </abbr>
